# AstroPhoto-Plus

./: .gitignore  .gitmodules  .tmux-session  .travis.yml  CMakeLists.txt  Changelog.md  README.md  TODO.md  api_utils.py  indi-lite.py  project_version.cmake  requirements.txt
backend/: .gitignore  .vimrc  AstroPhotoPlus.service  CMakeLists.txt  StarQuew.service  api_decorators.py  api_entrypoint.py  api_utils.py  app.py  broadcast_service.py  commands.json  commands.py  controller.py  redis_client.py  redis_server.py  requirements.txt  sequence_runner.py  sequences_runner.py  server_sent_events.py  service.py  star-quew.py  start-debug-server  start-server  static_settings.py  version.json
backend/autoguider/: __init__.py  autoguider.py  camera_guider_control.py  donuts_autoguider.py  guider_control.py  phd2_autoguider.py  shooter.py
backend/catalogs/: __init__.py  catalogs.py  get_catalog.py  import_catalogs.py
backend/errors/: __init__.py  model_exceptions.py  sequence_exceptions.py
backend/image_processing/: .gitignore  clean  compile  image_processing.cpp  image_processing.h  image_processing.i  image_processing.py  image_processing_p.cpp  image_processing_p.h  image_processing_wrap.cxx  setup.py  update_swig
backend/images/: __init__.py  image.py  images_db.py
backend/indi/: __init__.py  astrometry.py  astrometry_downloader.py  astrometry_indexes.py  blob_client.py  camera.py  device.py  filter_wheel.py  guider.py  indi_profile.py  indi_property.py  indi_service.py  parse_md5_file  server.py  telescope.py
backend/models/: __init__.py  camera.py  command_sequence_item.py  commands.py  exceptions.py  exposure_sequence_item.py  exposure_sequence_item_runner.py  filter_wheel.py  filter_wheel_sequence_item.py  histogram.py  image.py  images_db.py  indi_profile.py  indi_service.py  model.py  property_sequence_item.py  save_async_fits.py  saved_list.py  sequence.py  sequence_exceptions.py  sequence_item.py  sequences_list.py  serializer.py  server.py  service.py  settings.py
backend/network/: __init__.py  network_management.py  network_manager.py  network_service.py
backend/phd2/: __init__.py  commands.py  errors.py  phd2.py  phd2_client.py  phd2_process.py  phd2_service.py  phd2_socket.py  xstartup
backend/platesolving/: __init__.py  astrometry_downloader.py  astrometry_indexes_tycho.py  platesolving.py
backend/polar_alignment/: .gitignore  __init__.py  darv.py  pa_platesolving.py  pa_platesolving_capture.py  pa_platesolving_drift.py  test.py
backend/sequences/: __init__.py  autoguider.py  command_sequence_item.py  command_sequence_job.py  exposure_sequence_item.py  exposure_sequence_item_runner.py  exposure_sequence_job.py  exposure_sequence_job_runner.py  exposure_sequence_job_runner_refact.py  filter_wheel_sequence_job.py  pause_sequence_job.py  property_sequence_item.py  property_sequence_job.py  save_async_fits.py  sequence.py  sequence_item.py  sequence_job.py  sequences_runner.py  shot.py  stop_sequence.py
backend/skychart/: .gitignore  __init__.py  astropy_monkeypatch.py  import_json_to_sql.py  marker.py  plot_rigel_region_sqlite.py  skychart.py  skyframe.py  star.py  stars.db  svg.py
backend/skychart/utils/: import_json_to_sql.py  split_stars_json.py  vizier_catalog_downloader.py
backend/system/: __init__.py  commands.py  controller.py  displays.py  event_listener.py  server_sent_events.py  service.py  settings.py
backend/utils/: benchmark_log.py  cleanup_venv.py  mp.py  system_time.py  test_processworker.py  threads.py  worker.py
config/: CMakeLists.txt
config/debian_based/: CMakeLists.txt  astrophotoplus-deb-updater  commands.json.in  etc_AstroPhotoPlus-commands.json.in  etc_StarQuew-commands.json.in  postinst.in  postrm.in
config/dev-webserver-conf/nginx/: astrophotoplus.conf  starquew.conf
config/examples/: raspberry-pi-commands.json
config/linux_generic/: CMakeLists.txt  commands.json
config/prod-webserver-conf/apache2/: astrophotoplus.conf
config/prod-webserver-conf/nginx/: astrophotoplus.conf  starquew.conf
config/raspberry_pi/: CMakeLists.txt  astrophotoplus-wifi-helper  commands.json  commands.json.in  dhcpcd-ap.conf  dnsmasq-wlan0.conf  etc_AstroPhotoPlus-commands.json.in  etc_StarQuew-commands.json.in  hostapd.conf  postinst.in  postrm.in  starquew-deb-updater
desktop/: CMakeLists.txt
desktop/src/: CMakeLists.txt  api.cpp  api.h  astrophotopluswidget.cpp  astrophotopluswidget.h  customwebpage.cpp  customwebpage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notification.ui  notifications.cpp  notifications.h  resources.qrc  serverdiscovery.cpp  serverdiscovery.h  settings.cpp  settings.h
desktop/src/res/: resources.qrc
desktop/src/resources/: CMakeLists.txt  launcher.desktop  resources.qrc
frontend/: .gitignore  CMakeLists.txt  app.json  index.native.js  package-lock.json  package.json  semantic.json
frontend/android/: build.gradle  settings.gradle
frontend/android/app/: BUCK  build.gradle
frontend/ios/AstroPhotoPlus_frontend/: AppDelegate.m  Info.plist
frontend/ios/AstroPhotoPlus_frontend.xcodeproj/: project.pbxproj
frontend/ios/AstroPhotoPlus_frontendTests/: AstroPhotoPlus_frontendTests.m
frontend/ios/StarQuew/: AppDelegate.m  Info.plist
frontend/ios/StarQuew-frontend/: AppDelegate.m  Info.plist
frontend/ios/StarQuew-frontend.xcodeproj/: project.pbxproj
frontend/ios/StarQuew-frontendTests/: StarQuew-frontendTests.m
frontend/ios/StarQuew.xcodeproj/: project.pbxproj
frontend/ios/StarQuewTests/: StarQuewTests.m
frontend/public/: index.html  manifest.json
frontend/public/data/: dsos.bright.json  readme.md
frontend/scripts/: remove_googlefonts_call.py
frontend/src/: actions.js  globals.js  index.js  index.native.js  initialiseApp.js  initialiseApp.native.js  reducers.js  routes.js  setupProxy.js
frontend/src/App/: App.css  App.js  AppContainer.js  TimeSyncModal.js  actions.js  appContainerSelector.js  reducer.js  selectors.js
frontend/src/Autoguider/: DitheringOptions.js  selectors.js
frontend/src/Autoguiding/: Autoguiding.js  AutoguidingContainer.js  actions.js  (+2 more)
(+555 files in other folders)
